<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!-- WARNING: Eclipse auto-generated file.
              Any modifications will be overwritten.
              To include a user specific buildfile here, simply create one in the same
              directory with the processing instruction <?eclipse.ant.import?>
              as the first entry and export the buildfile again. --><project basedir="." default="build" name="SkateSpot">
    <property environment="env"/>
    <property name="ECLIPSE_HOME" value="../../../eclipse/java-2020-09/eclipse/"/>
    <property name="debuglevel" value="source,lines,vars"/>
    <property name="target" value="14"/>
    <property name="source" value="14"/>
    <path id="JavaFX.userclasspath"/>
    <path id="Apache Tomcat v9.0 [Apache Tomcat v9.0].libraryclasspath">
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/annotations-api.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/catalina-ant.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/catalina-ha.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/catalina-ssi.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/catalina-storeconfig.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/catalina-tribes.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/catalina.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/ecj-4.17.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/el-api.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/jasper-el.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/jasper.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/jaspic-api.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/jsp-api.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/servlet-api.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-api.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-coyote.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-dbcp.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-cs.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-de.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-es.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-fr.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-ja.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-ko.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-pt-BR.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-ru.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-zh-CN.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-jdbc.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-jni.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-util-scan.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-util.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-websocket.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/websocket-api.jar"/>
    </path>
    <path id="Web App Libraries.libraryclasspath"/>
    <path id="EAR Libraries.libraryclasspath"/>
    <path id="JavaFx.userclasspath">
        <pathelement location="../../../../../Program Files/Java/javafx-sdk-15.0.1/lib/javafx.base.jar"/>
        <pathelement location="../../../../../Program Files/Java/javafx-sdk-15.0.1/lib/javafx.controls.jar"/>
        <pathelement location="../../../../../Program Files/Java/javafx-sdk-15.0.1/lib/javafx.fxml.jar"/>
        <pathelement location="../../../../../Program Files/Java/javafx-sdk-15.0.1/lib/javafx.graphics.jar"/>
        <pathelement location="../../../../../Program Files/Java/javafx-sdk-15.0.1/lib/javafx.media.jar"/>
        <pathelement location="../../../../../Program Files/Java/javafx-sdk-15.0.1/lib/javafx.swing.jar"/>
        <pathelement location="../../../../../Program Files/Java/javafx-sdk-15.0.1/lib/javafx.web.jar"/>
        <pathelement location="../../../../../Program Files/Java/javafx-sdk-15.0.1/lib/javafx-swt.jar"/>
    </path>
    <path id="SkateSpot.classpath">
        <pathelement location="build/classes"/>
        <path refid="JavaFX.userclasspath"/>
        <path refid="Apache Tomcat v9.0 [Apache Tomcat v9.0].libraryclasspath"/>
        <path refid="Web App Libraries.libraryclasspath"/>
        <path refid="EAR Libraries.libraryclasspath"/>
        <path refid="JavaFx.userclasspath"/>
        <pathelement location="../../../../../Program Files/mysql-connector-java-5.1.46/lib/mysql-connector-java-5.1.46-bin.jar"/>
        <pathelement location="D:/Programmi/JavaStuff/MySqlConnector/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar"/>
    </path>
    <path id="run.AuthenticatedUserRealm.classpath">
        <path refid="SkateSpot.classpath"/>
        <path refid="JavaFX.userclasspath"/>
        <path refid="Apache Tomcat v9.0 [Apache Tomcat v9.0].libraryclasspath"/>
        <path refid="Web App Libraries.libraryclasspath"/>
        <path refid="EAR Libraries.libraryclasspath"/>
        <path refid="JavaFx.userclasspath"/>
        <pathelement location="D:/Programmi/JavaStuff/MySqlConnector/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar"/>
    </path>
    <path id="run.HomeMain.classpath">
        <path refid="SkateSpot.classpath"/>
        <path refid="JavaFX.userclasspath"/>
        <path refid="Apache Tomcat v9.0 [Apache Tomcat v9.0].libraryclasspath"/>
        <path refid="Web App Libraries.libraryclasspath"/>
        <path refid="EAR Libraries.libraryclasspath"/>
        <path refid="JavaFx.userclasspath"/>
        <pathelement location="D:/Programmi/JavaStuff/MySqlConnector/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar"/>
    </path>
    <path id="run.HomeViewMain.classpath">
        <path refid="SkateSpot.classpath"/>
        <path refid="JavaFX.userclasspath"/>
        <path refid="Apache Tomcat v9.0 [Apache Tomcat v9.0].libraryclasspath"/>
        <path refid="Web App Libraries.libraryclasspath"/>
        <path refid="EAR Libraries.libraryclasspath"/>
        <path refid="JavaFx.userclasspath"/>
        <pathelement location="D:/Programmi/JavaStuff/MySqlConnector/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar"/>
    </path>
    <target name="init">
        <mkdir dir="build/classes"/>
        <copy includeemptydirs="false" todir="build/classes">
            <fileset dir="src">
                <exclude name="**/*.java"/>
            </fileset>
        </copy>
    </target>
    <target name="clean">
        <delete dir="build/classes"/>
    </target>
    <target depends="clean" name="cleanall"/>
    <target depends="build-subprojects,build-project" name="build"/>
    <target name="build-subprojects"/>
    <target depends="init" name="build-project">
        <echo message="${ant.project.name}: ${ant.file}"/>
        <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" includeantruntime="false" source="${source}" target="${target}">
            <src path="src"/>
            <classpath refid="SkateSpot.classpath"/>
        </javac>
    </target>
    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
        <copy todir="${ant.library.dir}">
            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
        </copy>
        <unzip dest="${ant.library.dir}">
            <patternset includes="jdtCompilerAdapter.jar"/>
            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
        </unzip>
    </target>
    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
        <antcall target="build"/>
    </target>
    <target name="AuthenticatedUserRealm">
        <java classname="org.apache.catalina.realm.AuthenticatedUserRealm" failonerror="true" fork="yes">
            <classpath refid="run.AuthenticatedUserRealm.classpath"/>
        </java>
    </target>
    <target name="HomeMain">
        <java classname="logic.gui.HomeMain" failonerror="true" fork="yes">
            <jvmarg line="--module-path &quot;C:\Program Files\Java\javafx-sdk-15.0.1\lib&quot; --add-modules javafx.controls,javafx.fxml"/>
            <classpath refid="run.HomeMain.classpath"/>
        </java>
    </target>
    <target name="HomeViewMain">
        <java classname="logic.gui.HomeViewMain" failonerror="true" fork="yes">
            <jvmarg line="--module-path &quot;C:\Program Files\Java\javafx-sdk-15.0.1\lib&quot; --add-modules javafx.controls,javafx.fxml"/>
            <classpath refid="run.HomeViewMain.classpath"/>
        </java>
    </target>
</project>
